prometheus-stack/templates/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  clusterIP: None
  ports:
    - name: http
      port: 3100
      targetPort: http
  selector:
    app: loki
