prometheus-stack/templates/loki/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
  labels:
    app: loki
spec:
  podSelector:
    matchLabels:
      app: loki
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3100
  policyTypes:
    - Ingress
